# AUGE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Arduino/include/: common_print.h  packet.h
Arduino/src/: common_print.cpp  packet.cpp
PC/: CMakeLists.txt  CMakePresets.json
PC/include/: auge.h  mouse.h  usb_comm.h
PC/src/: CMakeLists.txt  auge.cpp  command.cpp  main.cpp  mouse.cpp  stringutils.cpp  usb_comm.cpp
PC/src/include/: auge.h  command.h  stringutils.h
shared/include/: common_print.h  common_type.h  packet.h
shared/src/: common_print.cpp  packet.cpp
